# bgfx-sdl-minimal-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
